header fix alignment

--- a/style/style.css
+++ b/style/style.css
@@ -27,6 +27,7 @@ header{
   grid-column-start: 1;
   grid-column-end: 4;
   padding: 90px 50px 0px 50px;
+  align-self: flex-end;
 }
 
 #textbox{
@@ -34,10 +35,12 @@ header{
   grid-column-end: 3;  
   line-height: 1.5em;
   padding: 0px 0px 90px 50px;
+  align-self: flex-start;
 }
 
 .w-container-border{
   width: 90%;
+  min-height: 80vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
